--- a/front/visualizer/src/assets/base.css
+++ b/front/visualizer/src/assets/base.css
@@ -1,8 +1,10 @@
 html,body,#app{
-  margin: 0 !important;;
+  margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
   font-family: 'Roboto', sans-serif;
-  overflow: hidden;
+  position : relative;
+  display: flex;
+  /*overflow: hidden;*/
 }
